@@ -18,17 +18,18 @@ import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
-import java.nio.charset.StandardCharsets;
 import java.time.LocalDateTime;
 import java.util.*;
 
 import java.nio.file.FileSystemException;
 
 import org.json.JSONObject;
+
+import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 
 @RestController
-@CrossOrigin(origins = "http://localhost:3000")
+@CrossOrigin("*")
 public class Controller {
 
     private final FileStorageService fileStorageService;
@@ -44,6 +45,10 @@ public class Controller {
     private void printErrorMessage(Exception e) {
         if (e != null)
             System.err.println(e.getMessage());
+    }
+
+    private <T> ResponseEntity<T> handleStatusCode200(Class<T> type) {
+        return new ResponseEntity<>(HttpStatus.OK);
     }
 
     private <T> ResponseEntity<T> handleStatusCode400(Exception e, Class<T> type) {
@@ -64,22 +69,27 @@ public class Controller {
     private ResponseEntity<SpecItem> returnSpecItemAndStatusCode(Optional<SpecItem> specItem) {
         try {
             if (specItem.isPresent()) {
+                System.out.println("SpecItem shortname: " + specItem.get().getShortName());
+                System.out.println("-------------------");
                 return new ResponseEntity<>(specItem.get(), HttpStatus.OK);
             }
-            return handleStatusCode404(null, SpecItem.class);
+            System.out.println("-------------------");
+            return new ResponseEntity<>(null, HttpStatus.OK);
         } catch (Exception e) {
             return handleStatusCode500(e, SpecItem.class);
         }
-    }
-    
-    private boolean isListOfSpecItemsPresentAndNotEmpty(Optional<List<SpecItem>> listOfSpecItems) {
-        return listOfSpecItems.isPresent() && ! listOfSpecItems.get().isEmpty();
     }
     
     @SuppressWarnings("unchecked")
     private ResponseEntity<List<SpecItem>> returnListOfSpecItemAndStatusCode(Optional<List<SpecItem>> listOfSpecItems) {
         try {
             if (listOfSpecItems.isPresent()) {
+                List<SpecItem> list = listOfSpecItems.get();
+                System.out.println("Number of SpecItems: " + list.size());
+                for (SpecItem e : list) {
+                    System.out.println("SpecItem shortname: " + e.getShortName());
+                }
+                System.out.println("-------------------");
                 return new ResponseEntity<>(listOfSpecItems.get(), HttpStatus.OK);
             }
             return handleStatusCode404(null, (Class<List<SpecItem>>) (Class<?>) List.class);
@@ -89,8 +99,20 @@ public class Controller {
     }
 
     private String getDecodedURLWithoutSpecialCharacters(String urlWithSpecialCharacters) {
-        String decodedURL = URLDecoder.decode(urlWithSpecialCharacters, StandardCharsets.UTF_8);
-        return decodedURL;
+        String decodedURL = "";
+        try {
+            urlWithSpecialCharacters = urlWithSpecialCharacters.replaceAll("%(?![0-9a-fA-F]{2})", "%25");
+            urlWithSpecialCharacters = urlWithSpecialCharacters.replaceAll("\\+", "%2B");
+
+            decodedURL = URLDecoder.decode(urlWithSpecialCharacters, "utf-8");
+        } catch (UnsupportedEncodingException e) {
+            System.err.println(e.getMessage());
+			return decodedURL;
+        } catch (Exception e) {
+            System.err.println(e.getMessage());
+        }
+        System.out.println("Search pattern (decoded): "+decodedURL);
+        return decodedURL;			
     }
 
     /***
@@ -174,6 +196,9 @@ public class Controller {
 
     @GetMapping("/get/{id}")
     public ResponseEntity<SpecItem> getSpecItemById(@PathVariable(value = "id")String id) {
+        System.out.println("ID (raw): " + id);
+        id = getDecodedURLWithoutSpecialCharacters(id);
+        System.out.println("ID (cleaned): " + id);
         Optional<SpecItem> specItem = Optional.ofNullable(service.getSpecItemById(id));
         return returnSpecItemAndStatusCode(specItem);
     }
@@ -191,8 +216,15 @@ public class Controller {
     }
 
     @GetMapping("/get/cont:{content}")
-    public ResponseEntity<List<SpecItem>> getSpecItemByContent(@PathVariable(value = "content") String content, @RequestParam(defaultValue = "1") int page) {
+    public ResponseEntity<List<SpecItem>> getSpecItemByContent(@PathVariable(value = "content") String content, @RequestParam(defaultValue = "1") int page) throws UnsupportedEncodingException {
+        System.out.println("Search pattern (raw): " + content);
+
+        // content = content.replaceAll("^(00)+", "");
+        // byte[] bytes = DatatypeConverter.parseHexBinary(content);
+        // content =  new String(bytes, "UTF-16");
+
 		content = getDecodedURLWithoutSpecialCharacters(content);
+        System.out.println("Search pattern (cleaned): " + content);
         Optional<List<SpecItem>> listOfSpecItems = Optional.ofNullable(service.getListOfSpecItemsByContent(content, page));
         return returnListOfSpecItemAndStatusCode(listOfSpecItems);
     }
